0.03
 - Improve doc for email.

0.02 2024-05-25T12:02:26+02:00
 - Rewrite check for id to Mo::utils::check_number_id().

0.01 2024-04-24T15:45:49+02:00
 - First version.