@@ -21,9 +21,9 @@ recursive_author_tests('xt');
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.28;
 requires 'Mo::utils::Email' => 0;
-resources 'bugtracker' => 'https://github.com/commons-vote/Data-Person/issues';
-resources 'homepage' => 'https://github.com/commons-vote/Data-Person';
-resources 'repository' => 'git://github.com/commons-vote/Data-Person';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-Person/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Data-Person';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Data-Person';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0;
 test_requires 'Test::More' => 0;
