@@ -1,4 +1,5 @@
 0.03
+ - Fix github repository.
  - Improve doc for email.
 
 0.02 2024-05-25T12:02:26+02:00
